<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="198dp"
        android:layout_height="46dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="32dp"
        android:text="@string/titleRegister"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/nameRegister"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/gmailRegister"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerName" />

    <EditText
        android:id="@+id/registerAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/ageRegister"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="157dp"
        android:layout_height="66dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/btnPrincipal"
        android:onClick="RegisterUser"
        android:text="@string/btnRegister"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/passwordRegister"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerAge" />

    <TextView
        android:id="@+id/goIntoNote"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="24dp"
        android:text="@string/homeOption2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <Button
        android:id="@+id/button"
        android:layout_width="165dp"
        android:layout_height="59dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="24dp"
        android:onClick="passToLogin"
        android:text="@string/btnChangeLogin"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goIntoNote" />

</androidx.constraintlayout.widget.ConstraintLayout>