<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homePage">

    <Button
        android:id="@+id/btnQuestion"
        android:layout_width="149dp"
        android:layout_height="61dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#3F51B5"
        android:onClick="Siguiente"
        android:text="@string/btnSiguiente"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionD" />

    <TextView
        android:id="@+id/question"
        android:layout_width="322dp"
        android:layout_height="49dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:text="@string/pregunta"
        android:textColor="?android:colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textoNumero"
        android:layout_width="109dp"
        android:layout_height="33dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="56dp"
        android:text="@string/noQuestion"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnQuestion"
        tools:ignore="TextSizeCheck" />

    <RadioButton
        android:id="@+id/questionA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="28dp"
        android:onClick="verificarRespuesta"
        android:text="@string/AQuestion"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <RadioButton
        android:id="@+id/questionB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:onClick="verificarRespuesta"
        android:text="@string/BQuestion"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionA" />

    <RadioButton
        android:id="@+id/questionC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:onClick="verificarRespuesta"
        android:text="@string/CQuestion"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionB" />

    <RadioButton
        android:id="@+id/questionD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:onClick="verificarRespuesta"
        android:text="@string/DQuestion"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionC" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="194dp"
        android:layout_height="59dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#E72262"
        android:onClick="CerrarSesion"
        android:text="@string/cerrarSesion"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoNumero" />
</androidx.constraintlayout.widget.ConstraintLayout>